House form bug fixes, added XSS to house form, modified house list CSS

--- a/views/pages/mainPage.handlebars
+++ b/views/pages/mainPage.handlebars
@@ -25,7 +25,7 @@
 
     <!-- CSS for ths form is in houseForm.css -->
     <div id="houseSearchForm">
-        <form action="/house/search" method="POST">
+        <form action="/house/search" method="POST" autocomplete="off">
             <div id="rent" class="form-horizontal col-md-3 form-group">
                 <label for="rent-min" class="control-label"> Rent Min. </label>
                 <input type="number" name="rent-min" id="rent-min" placeholder="0" class="form-control">
