--- a/views/pages/houseList.handlebars
+++ b/views/pages/houseList.handlebars
@@ -8,22 +8,13 @@
                 Links to individual house pages
                 Photo of the house
                 Brief description
-
-        So without CSS the image size won't be regulated and it will all
-        look like a long list of course
-
-        As of right now, this code will display all the houses in the collection
-        We will change this to houses that match the user criteria only of course
       -->
 
     <!-- CSS in houseList.css -->
 
-    <div class="grid-container">
-        <div class="grid-item">
-
-            {{#each list}}
-
-
+    <div class="form-inline houseList col-md-12">
+        {{#each list}}
+        <div class="col-md-4 house">
             <div class="cover-container">
                 <img class="cover-item" src="{{this.profilePicture.[0]}}" alt="house">
             </div>
@@ -39,7 +30,7 @@
                 </div>
 
                 <a href="{{this._id}}">View Details</a>
-
+        
                 <br>
 
                 {{#if this.canUpdate}}
@@ -53,6 +44,7 @@
 
 
             </div>
+           </div>
             {{/each}}
 
             {{#if emptySearch}}
@@ -71,5 +63,4 @@
             </div>
             {{/if}}
 
-        </div>
     </div>
